fix: css problem text align

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 footer {
   display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   padding: 1rem 0;
 }
 
